--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,39 +1,1 @@
-body
-{
-    color: rgb(3, 3, 3);
-text-align: center;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-font-size: 16px;
-margin: 0;
-padding: 0;
-}
-#cabecera
-{
-    background: #33A;
-    box-shadow: 0px 2px 40px 0px rgb(0, 0, 0); 
-    color: white;
-    font-weight: bold;
-    margin: 0;
-    padding: 0.5em;
-    font-size: 26px;
-}
-#cabecera #taligne
-{
-    padding: 0 0 0 1em;
-    font-weight: bold;
-    font-size: 0.8em;
-}
-
-#container 
-{
-    width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid rgb(12, 10, 10);
-    margin: 0 auto;
-}
-
-#container h1
-{
-    font-size: 40px;
-}
+body{background:#1e1f24;color:#333;text-align:center;font-family:Arial;font-size:16px;margin:0;padding:0}#cabecera{background:#37488b;box-shadow:0 2px 20px 0 rgba(0,0,0,.5);color:#fff;font-weight:700;margin:0;padding:.5em}#cabecera #logo{width:20px;vertical-align:middle}#cabecera #tagline{padding:0 0 0 1em;font-weight:400;font-size:.8em}#container{width:70%;padding:0;text-align:left;border:1px solid #ddd;margin:0 auto}#container h1{font-size:20px}#post{background:#fff;padding:1em}
