--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@ padding: 0;
 #cabecera
 {
     background: #33A;
-    box-shadow: 0px 2px 40px 0px rgb(0, 0, 0); 
+    box-shadow: 20px 2px 40px 0px rgb(0, 0, 0); 
     color: white;
     font-weight: bold;
     margin: 0;
@@ -36,4 +36,12 @@ padding: 0;
 #container h1
 {
     font-size: 40px;
+}
+
+#footer
+{
+    background: #777;
+    color:  white;
+    text-align: center;
+    padding: 0.5em;
 }
