--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
-    background:#1e1f24;
-    color:#333;
+    background:#e6e6e6;
+    color:rgb(0, 0, 0);
     text-align:center;
     font-family:Arial;
     font-size:16px;
@@ -35,7 +35,7 @@ body
         width:70%;
         padding:0;
         text-align:left;
-        border:1px solid #ddd;
+        border:1px solid rgb(0, 0, 0);
         margin:0 auto
     }
 
@@ -46,7 +46,7 @@ body
     
     #post
     {
-        background:#fff;
+        background:rgb(10, 10, 10);
         padding:1em
     }
 
