se agreggo imagen al blog

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,6 +30,12 @@ body
         font-size:.8em
     }
 
+    #post #teams
+    {
+        width:50px;
+        
+    }
+
     #container
     {
         width:70%;
